samples/_failures_safe/1761172305_141d03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d03623d.c: In function ‘main’:
./samples/SAFE/__tmp_5d03623d.c:156:5: error: expected declaration or statement at end of input
  156 |     } else {
      |     ^
./samples/SAFE/__tmp_5d03623d.c:156:5: error: expected declaration or statement at end of input
